woorizip-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gatewayapp
        image: 211125685751.dkr.ecr.ap-northeast-2.amazonaws.com/woorizip-gateway:20240508045528
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    alb.ingress.kubernetes.io/group.name: teamwaf
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:211125685751:certificate/c7979fef-a310-4ce3-9ead-80528f822f61
    external-dns.alpha.kubernetes.io/hostname: api.teamwaf.app

spec:
  ingressClassName: alb
  rules:
  - host: api.teamwaf.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-gateway
            port:
              number: 80
